# xdBot

./: .gitignore  CMakeLists.txt  README.md  about.md  changelog.md  mod.json  support.md
.github/workflows/: NO.yml  android copy.yml  android.yml  build.yml  c-cdpp.yml  multi-platform.yml  wa2lmao.yml
src/: fileSystem.hpp  global.cpp  includes.hpp  keybinds.cpp  macro.cpp  macro.hpp  main.cpp
src/gdr/: gdr.cpp  gdr.hpp
src/hacks/: autoclicker.cpp  clickbot.cpp  clickbot.hpp  coin_finder.cpp  coin_finder.hpp  frame_stepper.cpp  layout_mode.cpp  layout_mode.hpp  other.cpp  show_trajectory.cpp  show_trajectory.hpp  tps_bypass.cpp
src/practice_fixes/: input.cpp  play_layer.cpp  player.cpp  practice_fixes.hpp
src/renderer/: renderer.cpp  renderer.hpp
src/renderer/ffmpeg/: events.hpp  export.hpp  recorder.hpp  render_settings.hpp
src/ui/: autoclicker_settings_layer.hpp  autosave_settings_layer.hpp  button_edit_layer.cpp  button_edit_layer.hpp  button_setting.cpp  button_setting.hpp  clickbot_layer.cpp  clickbot_layer.hpp  game_ui.cpp  game_ui.hpp  load_macro_layer.cpp  load_macro_layer.hpp  macro_editor.cpp  macro_editor.hpp  macro_info_layer.hpp  mirror_settings_layer.hpp  noclip_settings_layer.hpp  record_layer.cpp  record_layer.hpp  render_presets_layer.hpp  render_settings_layer.cpp  render_settings_layer.hpp  save_macro_layer.hpp  trajectory_settings_layer.hpp
src/utils/: subprocess.hpp  utils.cpp  utils.hpp
